# TextFormat

./: README.md  setup.cfg
textformat/: __init__.py  core.py
