[metadata]
name = textformat
version = 0.0.1
author = Luis Fernando
author_email = lufergonn@gmail.com
description = Text Format (Data cleansing).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuferGonn/TextFormat
download_url = https://github.com/LuferGonn/TextFormat/archive/refs/tags/v0.001.zip
project_urls =
    Bug Tracker = https://github.com/LuferGonn/TextFormat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = textformat
packages = find:
python_requires = >=3.6

[options.packages.find]
where = textformat

